--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "13.4.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.45.4"
+    "react-hook-form": "^7.45.4",
+    "recharts": "^2.7.3"
   },
   "devDependencies": {
     "@types/node": "20.5.0",
